--- a/prop.html
+++ b/prop.html
@@ -236,7 +236,7 @@
         <section class="bg-gradient-to-br from-gray-900 to-[#1E40AF] rounded-2xl shadow-xl overflow-hidden p-8 text-white">
             <h2 class="text-2xl font-bold mb-6 text-center">The Strategic Link: Bridging the Gap</h2>
             <p class="text-center text-blue-200 mb-10 max-w-2xl mx-auto">
-                ETS often works without "on-the-ground" context. A formal Liaison role ensures IT delivery matches Operational reality.
+                IT often works without "on-the-ground" context. A formal Liaison role ensures IT delivery matches Operational reality.
             </p>
 
             <!-- CSS Grid Diagram -->
@@ -478,4 +478,5 @@
 </body>
 
 </html>
+
 
